raffia/tests/error/scss/at-rule/use/as-nothing.snap
---
source: raffia/tests/error.rs
---
error: `*` or ident for Sass namespace is expected
  ┌─ as-nothing.scss:1:14
  │
1 │ @use "foo" as;
  │              ^


